--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,12 +5,12 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-286.7KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇭🇰 香港-17.23MB/s(Youtube:不良林), server: 182.160.12.239, port: 45524, type: vmess, uuid: a265dcb2-04a3-48c0-a703-fad0e008d474, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-612.5KB/s(Youtube:不良林), server: 161.35.69.20, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇫🇷 法国-2.20MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇯🇵 日本-3.24MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.77MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-2.76MB/s(Youtube:不良林), server: 152.70.123.141, port: 80, type: vmess, uuid: 60d31325-3a80-4d82-99d8-ebf3b3108a42, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 152.70.123.141}}
+  - {name: 🇭🇰 香港-2.95MB/s(Youtube:不良林), server: bai-piao-wang-zhe.hk2.jackson2025.cf, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: bai-piao-wang-zhe.hk2.jackson2025.cf}}
+  - {name: 🇺🇸 美国-287.1KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇦🇺 澳大利亚-708.1KB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.09MB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-3.57MB/s(Youtube:不良林), server: 164.92.107.59, port: 1645, type: ss, cipher: chacha20-ietf-poly1305, password: 3f411e87-3e93-4f23-bc22-263a748bc8c5}
   - {name: 🇺🇸 美国-509.9KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
   - {name: 🇳🇱 荷兰-362.7KB/s(Youtube:不良林), server: 41.216.177.41, port: 443, type: trojan, password: 274c1b23-2bfe-40ac-943c-ebc1aa044b22, skip-cert-verify: true}
   - {name: 🇯🇵 日本-492.3KB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
@@ -21,12 +21,12 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-286.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-17.23MB/s(Youtube:不良林)
-      - 🇩🇪 德国-612.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.20MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-287.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-708.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-509.9KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-362.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-492.3KB/s(Youtube:不良林)
@@ -36,12 +36,12 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-286.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-17.23MB/s(Youtube:不良林)
-      - 🇩🇪 德国-612.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.20MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-287.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-708.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-509.9KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-362.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-492.3KB/s(Youtube:不良林)
@@ -52,12 +52,12 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-286.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-17.23MB/s(Youtube:不良林)
-      - 🇩🇪 德国-612.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.20MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-287.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-708.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-509.9KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-362.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-492.3KB/s(Youtube:不良林)
@@ -66,19 +66,19 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-17.23MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.95MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-286.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-17.23MB/s(Youtube:不良林)
-      - 🇩🇪 德国-612.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.20MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-287.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-708.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-509.9KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-362.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-492.3KB/s(Youtube:不良林)
@@ -88,12 +88,12 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-286.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-17.23MB/s(Youtube:不良林)
-      - 🇩🇪 德国-612.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.20MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-287.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-708.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-509.9KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-362.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-492.3KB/s(Youtube:不良林)
@@ -104,12 +104,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-286.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-17.23MB/s(Youtube:不良林)
-      - 🇩🇪 德国-612.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.20MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-287.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-708.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-509.9KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-362.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-492.3KB/s(Youtube:不良林)
@@ -129,12 +129,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-286.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-17.23MB/s(Youtube:不良林)
-      - 🇩🇪 德国-612.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.20MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-287.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-708.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-509.9KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-362.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-492.3KB/s(Youtube:不良林)
