--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-2.76MB/s(Youtube:不良林), server: 152.70.123.141, port: 80, type: vmess, uuid: 60d31325-3a80-4d82-99d8-ebf3b3108a42, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 152.70.123.141}}
-  - {name: 🇭🇰 香港-2.95MB/s(Youtube:不良林), server: bai-piao-wang-zhe.hk2.jackson2025.cf, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: bai-piao-wang-zhe.hk2.jackson2025.cf}}
-  - {name: 🇺🇸 美国-287.1KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇦🇺 澳大利亚-708.1KB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1.09MB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇳🇱 荷兰-2.14MB/s(Youtube:不良林), server: 104.255.65.112, port: 30718, type: vmess, uuid: f0f63386-d747-4d44-8d16-6e2d254f0ed3, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.01MB/s(Youtube:不良林), server: ss2.2046.gq, port: 4443, type: trojan, password: 794871c6-022b-4498-b816-296e8a581d86, sni: ss2.2046.gq, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.06MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-287.1KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-3.57MB/s(Youtube:不良林), server: 164.92.107.59, port: 1645, type: ss, cipher: chacha20-ietf-poly1305, password: 3f411e87-3e93-4f23-bc22-263a748bc8c5}
-  - {name: 🇺🇸 美国-509.9KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇳🇱 荷兰-362.7KB/s(Youtube:不良林), server: 41.216.177.41, port: 443, type: trojan, password: 274c1b23-2bfe-40ac-943c-ebc1aa044b22, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-207.9KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
   - {name: 🇯🇵 日本-492.3KB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-1.36MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-1.44MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-287.1KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-708.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.09MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-287.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-509.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-362.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-207.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-492.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-287.1KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-708.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.09MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-287.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-509.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-362.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-207.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-492.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-287.1KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-708.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.09MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-287.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-509.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-362.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-207.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-492.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-2.95MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-287.1KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-708.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.09MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-287.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-509.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-362.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-207.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-492.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-287.1KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-708.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.09MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-287.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-509.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-362.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-207.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-492.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-287.1KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-708.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.09MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-287.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-509.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-362.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-207.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-492.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-287.1KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-708.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.09MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-287.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-509.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-362.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-207.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-492.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
